Create draft swagger to support delete and modify user
